--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
@@ -28,7 +28,7 @@
         <MudText Typo="Typo.body2" Class="ml-2" Style="font-size: 0.7rem;">@_humanizedLastModifiedDate</MudText>
         <div style="flex: 1;" />
         <MudTooltip Text="@Localize["Activity.Card.EditButtonTooltip"]">
-            <MudIconButton Icon="@Icons.Material.Filled.Edit" OnClick="Edit"></MudIconButton>
+            <MudIconButton Icon="@Icons.Material.Filled.Edit" OnClick="Edit" />
         </MudTooltip>
         <MudMenu Icon="@Icons.Material.Filled.MoreVert">
             <MudMenuItem Icon="@Icons.Material.Filled.Code" OnClick="OpenScript">@Localize["Activity.Card.OpenScriptMenu"]</MudMenuItem>
