--- a/Solution/ActivityLauncher.Client/Pages/Configuration/ConfigurationPage.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Configuration/ConfigurationPage.razor
@@ -8,7 +8,7 @@
 @inject IActivityStore ActivityStore
 @inject IAppConfiguration AppConfiguration
 @inject NavigationManager Navigation
-@inject IStringLocalizer<ConfigurationLocales> Localize
+@inject IStringLocalizer<ConfigurationPageLocales> Localize
 @inject ApplicationEventManager EventManager
 
 @attribute [Route(Routes.ConfigurationPage)]
