--- a/Solution/ActivityLauncher.Client/Shared/Molecules/NavMenu.razor
+++ b/Solution/ActivityLauncher.Client/Shared/Molecules/NavMenu.razor
@@ -3,4 +3,5 @@
 <MudNavMenu Class="mt-4">
     <MudNavLink Href="@Routes.ActivitiesPage" Match="NavLinkMatch.Prefix">@Localize["Navigation.Activities"]</MudNavLink>
     <MudNavLink Href="@Routes.ConfigurationPage" Match="NavLinkMatch.Prefix">@Localize["Navigation.Configuration"]</MudNavLink>
+    <MudNavLink Href="@Routes.AboutPage" Match="NavLinkMatch.Prefix">@Localize["Navigation.About"]</MudNavLink>
 </MudNavMenu>
