--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ProgramTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/ProgramTaskCard.razor
@@ -3,7 +3,7 @@
 
 <GenericTaskCard Task="Task" EditMode="EditMode" OnRemove="OnRemove" OnNameChange="OnNameChange" TaskType="Task.TaskType">
     <TaskDetailTemplate>
-
+        @* todo: ajouter l'affichage et le formulaire de modification de la tâche *@
     </TaskDetailTemplate>
 </GenericTaskCard>
 
