--- a/Solution/ActivityLauncher.Client/_Imports.razor
+++ b/Solution/ActivityLauncher.Client/_Imports.razor
@@ -6,6 +6,7 @@
 
 @using ActivityLauncher.Client.Common.Controllers
 @using ActivityLauncher.Client.Common.Events
+@using ActivityLauncher.Client.Common.Extensions
 @using ActivityLauncher.Client.Common.Navigation
 @using ActivityLauncher.Client.Common.Services
 @using ActivityLauncher.Client.Common.Theming
