--- a/Solution/ActivityLauncher.Client/Shared/Atoms/ErrorText.razor
+++ b/Solution/ActivityLauncher.Client/Shared/Atoms/ErrorText.razor
@@ -1,6 +1,6 @@
 ﻿@if (!string.IsNullOrWhiteSpace(Error))
 {
-    <MudText Class="@Class" Typo="Typo.body2" Color="Color.Error">@(new MarkupString(Error))</MudText>
+    <MudText Class="@Class" Typo="Typo" Color="Color.Error">@(new MarkupString(Error))</MudText>
 }
 
 @code {
@@ -8,5 +8,8 @@
     public string? Error { get; set; }
 
     [Parameter]
-    public string Class { get; set; }
+    public string Class { get; set; } = string.Empty;
+
+    [Parameter]
+    public Typo Typo { get; set; } = Typo.body2;
 }
