--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/ActivityCard.razor
@@ -16,7 +16,7 @@
             else
             {
                 <MudTooltip Text="@Localize.Pluralize("Activity.Card.InvalidTooltip", _invalidtaskCount)">
-                    <MudIconButton Icon="@Icons.Material.Filled.Error" Size="Size.Large" Color="Color.Error" />
+                    <MudIconButton Icon="@Icons.Material.Filled.ErrorOutline" Size="Size.Large" Color="Color.Error" />
                 </MudTooltip>
             }
         </CardHeaderActions>
