--- a/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/TasksDialogSection.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Organisms/TasksDialogSection.razor
@@ -29,7 +29,7 @@
                                         <span>@task.Name</span>
                                         @if (!EditMode && !task.IsValid())
                                         {
-                                            <MudIcon Icon="@Icons.Material.Filled.Error" Color="Color.Error" />
+                                            <MudIcon Icon="@Icons.Material.Filled.ErrorOutline" Color="Color.Error" />
                                         }
                                     </MudStack>
                                 </MudListItem>
