--- a/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/GenericTaskCard.razor
+++ b/Solution/ActivityLauncher.Client/Pages/Activities/Molecules/Tasks/GenericTaskCard.razor
@@ -37,7 +37,7 @@
                 else
                 {
                     <MudTooltip Text="@InvalidTooltip">
-                        <MudIconButton Icon="@Icons.Material.Filled.Error" Size="Size.Large" Color="Color.Error" />
+                        <MudIconButton Icon="@Icons.Material.Filled.ErrorOutline" Color="Color.Error" />
                     </MudTooltip>
                 }
             }
