--- a/Solution/ActivityLauncher.Client/Shared/Atoms/FilePickerInput.razor
+++ b/Solution/ActivityLauncher.Client/Shared/Atoms/FilePickerInput.razor
@@ -6,11 +6,17 @@
 <div>
     <MudStack Class="mb-1">
         <div>
-            <MudButton Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.FileOpen" Color="Color.Primary" Size="Size.Small" OnClick="PickFile">@Label</MudButton>
+            <MudButton Disabled="Disabled" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.FileOpen" Color="Color.Primary" Size="Size.Small" OnClick="PickFile">@Label</MudButton>
         </div>
         @if (!string.IsNullOrWhiteSpace(FilePath))
         {
-            <code style="font-size: 1rem; overflow-wrap: anywhere;">@FilePath</code>
+            <MudStack Row Spacing="2" AlignItems="AlignItems.Center">
+                <code style="font-size: 1rem; overflow-wrap: anywhere;">@FilePath</code>
+                @if (Clearable)
+                {
+                    <MudIconButton Icon="@Icons.Material.Filled.Close" Size="Size.Small" OnClick="Clear" />
+                }
+            </MudStack>
         }
     </MudStack>
     <ErrorText Error="@_error" />
@@ -21,10 +27,16 @@
     public string Label { get; set; } = string.Empty;
 
     [Parameter]
-    public string FilePath { get; set; } = string.Empty;
+    public string? FilePath { get; set; }
 
     [Parameter]
-    public EventCallback<string> FilePathChanged { get; set; }
+    public EventCallback<string?> FilePathChanged { get; set; }
+
+    [Parameter]
+    public bool Disabled { get; set; } = false;
+
+    [Parameter]
+    public bool Clearable { get; set; } = false;
 
     private string? _error;
 
@@ -37,6 +49,15 @@
             _error = null;
             FilePath = result.FullPath;
             await FilePathChanged.InvokeAsync(FilePath);
+        }
+    }
+
+    private async Task Clear()
+    {
+        if (Clearable)
+        {
+            FilePath = null;
+            await FilePathChanged.InvokeAsync(null);
         }
     }
 }
