--- a/Solution/ActivityLauncher.Client/Shared/Atoms/FolderPickerInput.razor
+++ b/Solution/ActivityLauncher.Client/Shared/Atoms/FolderPickerInput.razor
@@ -12,7 +12,7 @@
         {
             <MudStack Row Spacing="2" AlignItems="AlignItems.Center">
                 <code style="font-size: 1rem; overflow-wrap: anywhere;">@FolderPath</code>
-                @if (AllowClear)
+                @if (Clearable)
                 {
                     <MudIconButton Icon="@Icons.Material.Filled.Close" Size="Size.Small" OnClick="Clear" />
                 }
@@ -33,7 +33,7 @@
     public EventCallback<string?> FolderPathChanged { get; set; }
 
     [Parameter]
-    public bool AllowClear { get; set; } = false;
+    public bool Clearable { get; set; } = false;
 
     private string? _error;
 
@@ -58,7 +58,7 @@
 
     private async Task Clear()
     {
-        if (AllowClear)
+        if (Clearable)
         {
             FolderPath = null;
             await FolderPathChanged.InvokeAsync(null);
